// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/select/MultiSelectFilter Multi Select Filter Aucune Option Selectionee 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto text-gray-500 italic"
  >
    Sélectionner une option
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/select/MultiSelectFilter Multi Select Filter Custom Open Button 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi-filter-fill fr-fi--sm w-full text-center text-bf500 font-bold"
  >
     Custom open button
  </span>
</button>
`;

exports[`Storyshots ui/shared/select/MultiSelectFilter Multi Select Filter Custom Option 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto flex flex-col flex-row line-clamp-1"
  >
    <span>
      Option 2
    </span>
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/select/MultiSelectFilter Multi Select Filter Plusieurs Options Selectionees 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto flex flex-col"
  >
    <span>
      Option 2
    </span>
    <span>
      Option 3
    </span>
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;

exports[`Storyshots ui/shared/select/MultiSelectFilter Multi Select Filter Plusieurs Options Selectionees Une Ligne 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="mr-auto flex flex-col flex-row line-clamp-1"
  >
    <span>
      Option 2
      , 
    </span>
    <span>
      Option 3
      , 
    </span>
    <span>
      Option 4
    </span>
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
  />
</button>
`;
